[project]
name = "audit-test-tools"
version = "0.1.0"
description = "Standalone audit test tools — LLM probes, Twitter search, Google News"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "pydantic-ai>=1.0",
    "aiohttp>=3.9",
    "scikit-learn>=1.3",
    "python-dotenv>=1.0",
]
